src/main/java/swscale/SwscaleLibrary.java

	/**
	 * Allocates and returns a SwsContext. You need it to perform<br>
	 * scaling/conversion operations using sws_scale().<br>
	 * * @param srcW the width of the source image<br>
	 * @param srcH the height of the source image<br>
	 * @param srcFormat the source image format<br>
	 * @param dstW the width of the destination image<br>
	 * @param dstH the height of the destination image<br>
	 * @param dstFormat the destination image format<br>
	 * @param flags specify which algorithm and options to use for rescaling<br>
	 * @return a pointer to an allocated context, or NULL in case of error<br>
	 * Original signature : <code>SwsContext* sws_getContext(int, int, PixelFormat, int, int, PixelFormat, int, SwsFilter*, SwsFilter*, const double*)</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:163</i><br>
	 * @deprecated use the safer methods {@link #sws_getContext(int, int, int, int, int, int, int, swscale.SwsFilter, swscale.SwsFilter, double[])} and {@link #sws_getContext(int, int, int, int, int, int, int, swscale.SwsFilter, swscale.SwsFilter, com.sun.jna.ptr.DoubleByReference)} instead<br>
	 * @param srcFormat @see PixelFormat<br>
	 * @param dstFormat @see PixelFormat
	 */
	@Mangling({"_Z14sws_getContextii11PixelFormatii11PixelFormatiP9SwsFilterP9SwsFilterPKd", "?sws_getContext@@YAPA10SwsContextHH11PixelFormatHH11PixelFormatHPAUSwsFilter@@PAUSwsFilter@@PAN@Z"}) 
	@Deprecated 
	Pointer sws_getContext(int srcW, int srcH, int srcFormat, int dstW, int dstH, int dstFormat, int flags, SwsFilter srcFilter, SwsFilter dstFilter, DoubleByReference param);
	/**
	 * Allocates and returns a SwsContext. You need it to perform<br>
	 * scaling/conversion operations using sws_scale().<br>
	 * * @param srcW the width of the source image<br>
	 * @param srcH the height of the source image<br>
	 * @param srcFormat the source image format<br>
	 * @param dstW the width of the destination image<br>
	 * @param dstH the height of the destination image<br>
	 * @param dstFormat the destination image format<br>
	 * @param flags specify which algorithm and options to use for rescaling<br>
	 * @return a pointer to an allocated context, or NULL in case of error<br>
	 * Original signature : <code>SwsContext* sws_getContext(int, int, PixelFormat, int, int, PixelFormat, int, SwsFilter*, SwsFilter*, const double*)</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:163</i><br>
	 * @param srcFormat @see PixelFormat<br>
	 * @param dstFormat @see PixelFormat
	 */
	@Mangling({"_Z14sws_getContextii11PixelFormatii11PixelFormatiP9SwsFilterP9SwsFilterPKd", "?sws_getContext@@YAPA10SwsContextHH11PixelFormatHH11PixelFormatHPAUSwsFilter@@PAUSwsFilter@@PAN@Z"}) 
	Pointer sws_getContext(int srcW, int srcH, int srcFormat, int dstW, int dstH, int dstFormat, int flags, SwsFilter srcFilter, SwsFilter dstFilter, double param[]);
	/**
	 * Scales the image slice in srcSlice and puts the resulting scaled<br>
	 * slice in the image in dst. A slice is a sequence of consecutive<br>
	 * rows in an image.<br>
	 * * Slices have to be provided in sequential order, either in<br>
	 * top-bottom or bottom-top order. If slices are provided in<br>
	 * non-sequential order the behavior of the function is undefined.<br>
	 * * @param context   the scaling context previously created with<br>
	 *                  sws_getContext()<br>
	 * @param srcSlice  the array containing the pointers to the planes of<br>
	 *                  the source slice<br>
	 * @param srcStride the array containing the strides for each plane of<br>
	 *                  the source image<br>
	 * @param srcSliceY the position in the source image of the slice to<br>
	 *                  process, that is the number (counted starting from<br>
	 *                  zero) in the image of the first row of the slice<br>
	 * @param srcSliceH the height of the source slice, that is the number<br>
	 *                  of rows in the slice<br>
	 * @param dst       the array containing the pointers to the planes of<br>
	 *                  the destination image<br>
	 * @param dstStride the array containing the strides for each plane of<br>
	 *                  the destination image<br>
	 * @return          the height of the output slice<br>
	 * Original signature : <code>int sws_scale(SwsContext*, const uint8_t*[], const int[], int, int, uint8_t*[], const int[])</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:194</i><br>
	 * @deprecated use the safer methods {@link #sws_scale(com.sun.jna.Pointer, com.sun.jna.ptr.PointerByReference, int[], int, int, com.sun.jna.ptr.PointerByReference, int[])} and {@link #sws_scale(com.sun.jna.Pointer, com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.IntByReference, int, int, com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Mangling({"_Z9sws_scaleP10SwsContextPPK7uint8_tPKiiiPP7uint8_tPKi", "?sws_scale@@YAHPA10SwsContextQAPA7uint8_tQAHHHQAPA7uint8_tQAH@Z"}) 
	@Deprecated 
	int sws_scale(Pointer context, PointerByReference srcSlice, IntByReference srcStride, int srcSliceY, int srcSliceH, PointerByReference dst, IntByReference dstStride);
	/**
	 * Scales the image slice in srcSlice and puts the resulting scaled<br>
	 * slice in the image in dst. A slice is a sequence of consecutive<br>
	 * rows in an image.<br>
	 * * Slices have to be provided in sequential order, either in<br>
	 * top-bottom or bottom-top order. If slices are provided in<br>
	 * non-sequential order the behavior of the function is undefined.<br>
	 * * @param context   the scaling context previously created with<br>
	 *                  sws_getContext()<br>
	 * @param srcSlice  the array containing the pointers to the planes of<br>
	 *                  the source slice<br>
	 * @param srcStride the array containing the strides for each plane of<br>
	 *                  the source image<br>
	 * @param srcSliceY the position in the source image of the slice to<br>
	 *                  process, that is the number (counted starting from<br>
	 *                  zero) in the image of the first row of the slice<br>
	 * @param srcSliceH the height of the source slice, that is the number<br>
	 *                  of rows in the slice<br>
	 * @param dst       the array containing the pointers to the planes of<br>
	 *                  the destination image<br>
	 * @param dstStride the array containing the strides for each plane of<br>
	 *                  the destination image<br>
	 * @return          the height of the output slice<br>
	 * Original signature : <code>int sws_scale(SwsContext*, const uint8_t*[], const int[], int, int, uint8_t*[], const int[])</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:194</i>
	 */
	@Mangling({"_Z9sws_scaleP10SwsContextPPK7uint8_tPKiiiPP7uint8_tPKi", "?sws_scale@@YAHPA10SwsContextQAPA7uint8_tQAHHHQAPA7uint8_tQAH@Z"}) 
	int sws_scale(Pointer context, PointerByReference srcSlice, int srcStride[], int srcSliceY, int srcSliceH, PointerByReference dst, int dstStride[]);
	/**
	 * @param inv_table the yuv2rgb coefficients, normally ff_yuv2rgb_coeffs[x]<br>
	 * @param fullRange if 1 then the luma range is 0..255 if 0 it is 16..235<br>
	 * @return -1 if not supported<br>
	 * Original signature : <code>int sws_setColorspaceDetails(SwsContext*, const int[4], int, const int[4], int, int, int, int)</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:210</i><br>
	 * @deprecated use the safer methods {@link #sws_setColorspaceDetails(com.sun.jna.Pointer, int[], int, int[], int, int, int, int)} and {@link #sws_setColorspaceDetails(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference, int, com.sun.jna.ptr.IntByReference, int, int, int, int)} instead
	 */
	@Mangling({"_Z24sws_setColorspaceDetailsP10SwsContextPKiiPKiiiii", "?sws_setColorspaceDetails@@YAHPA10SwsContextQAHHQAHHHHH@Z"}) 
	@Deprecated 
	int sws_setColorspaceDetails(Pointer c, IntByReference inv_table, int srcRange, IntByReference table, int dstRange, int brightness, int contrast, int saturation);
	/**
	 * @param inv_table the yuv2rgb coefficients, normally ff_yuv2rgb_coeffs[x]<br>
	 * @param fullRange if 1 then the luma range is 0..255 if 0 it is 16..235<br>
	 * @return -1 if not supported<br>
	 * Original signature : <code>int sws_setColorspaceDetails(SwsContext*, const int[4], int, const int[4], int, int, int, int)</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:210</i>
	 */
	@Mangling({"_Z24sws_setColorspaceDetailsP10SwsContextPKiiPKiiiii", "?sws_setColorspaceDetails@@YAHPA10SwsContextQAHHQAHHHHH@Z"}) 
	int sws_setColorspaceDetails(Pointer c, int inv_table[], int srcRange, int table[], int dstRange, int brightness, int contrast, int saturation);
	/**
	 * @return -1 if not supported<br>
	 * Original signature : <code>int sws_getColorspaceDetails(SwsContext*, int**, int*, int**, int*, int*, int*, int*)</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:217</i><br>
	 * @deprecated use the safer methods {@link #sws_getColorspaceDetails(com.sun.jna.Pointer, com.sun.jna.ptr.PointerByReference, java.nio.IntBuffer, com.sun.jna.ptr.PointerByReference, java.nio.IntBuffer, java.nio.IntBuffer, java.nio.IntBuffer, java.nio.IntBuffer)} and {@link #sws_getColorspaceDetails(com.sun.jna.Pointer, com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Mangling({"_Z24sws_getColorspaceDetailsP10SwsContextPPiPiPPiPiPiPiPi", "?sws_getColorspaceDetails@@YAHPA10SwsContextPAPAHPAHPAPAHPAHPAHPAHPAH@Z"}) 
	@Deprecated 
	int sws_getColorspaceDetails(Pointer c, PointerByReference inv_table, IntByReference srcRange, PointerByReference table, IntByReference dstRange, IntByReference brightness, IntByReference contrast, IntByReference saturation);
	/**
	 * @return -1 if not supported<br>
	 * Original signature : <code>int sws_getColorspaceDetails(SwsContext*, int**, int*, int**, int*, int*, int*, int*)</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:217</i>
	 */
	@Mangling({"_Z24sws_getColorspaceDetailsP10SwsContextPPiPiPPiPiPiPiPi", "?sws_getColorspaceDetails@@YAHPA10SwsContextPAPAHPAHPAPAHPAHPAHPAHPAH@Z"}) 
	int sws_getColorspaceDetails(Pointer c, PointerByReference inv_table, IntBuffer srcRange, PointerByReference table, IntBuffer dstRange, IntBuffer brightness, IntBuffer contrast, IntBuffer saturation);
	/**
	 * Allocates and returns an uninitialized vector with length coefficients.<br>
	 * Original signature : <code>SwsVector* sws_allocVec(int)</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:224</i>
	 */
	@Mangling({"_Z12sws_allocVeci", "?sws_allocVec@@YAPAUSwsVector@@H@Z"}) 
	SwsVector sws_allocVec(int length);
	/**
	 * Returns a normalized Gaussian curve used to filter stuff<br>
	 * quality=3 is high quality, lower is lower quality.<br>
	 * Original signature : <code>SwsVector* sws_getGaussianVec(double, double)</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:230</i>
	 */
	@Mangling({"_Z18sws_getGaussianVecdd", "?sws_getGaussianVec@@YAPAUSwsVector@@NN@Z"}) 
	SwsVector sws_getGaussianVec(double variance, double quality);
	/**
	 * Allocates and returns a vector with length coefficients, all<br>
	 * with the same value c.<br>
	 * Original signature : <code>SwsVector* sws_getConstVec(double, int)</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:236</i>
	 */
	@Mangling({"_Z15sws_getConstVecdi", "?sws_getConstVec@@YAPAUSwsVector@@NH@Z"}) 
	SwsVector sws_getConstVec(double c, int length);
